adicionando paragrafo no meu site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Meu primeiro site</title>
     </head>
     <body>
-        
+        <p>Minha pagina html</p>
     </body>    
 </html>
